--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,26 +3,65 @@ version: '3'
 volumes:
   dados:
 
+networks: 
+  banco:
+  web:
+  fila:
+
 services: 
   db:
     image: postgres:9.6
     volumes:
+      # Data
       - dados:/var/lib/postgresql/data
+      # Scripts
       - ./scripts:/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks: 
+      - banco
 
   frontend:
     image: nginx:1.13
     volumes:
+      # Site
       - ./web:/usr/share/nginx/html
+      # Configuração do proxy reverso
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports: 
       - 80:80
+    networks: 
+      - web
+    depends_on: 
+      - app
   
   app:
     image: python:3.6
     volumes:
       - ./app:/app
+    environment: 
+      - DB_NAME=teste_override
     working_dir: /app
-    ports: 
-      - 8080:8080
     command: bash ./app.sh
+    networks: 
+      - banco
+      - web
+      - fila
+    depends_on: 
+      - db
+      - queue
+  
+  queue:
+    image: redis:3.2
+    networks: 
+      - fila
+  
+  worker:
+    build: worker
+    volumes: 
+      - ./worker:/worker
+    working_dir: /worker
+    command: worker.py
+    networks: 
+      - fila
+    depends_on: 
+     - queue
